--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "laravel-cli": "0.0.3",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
-    "vue": "^2.5.2"
+    "vue": "^2.5.2",
+    "vuex": "3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
