--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "0.18.0",
+    "cors": "2.8.5",
     "laravel-cli": "0.0.3",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
