--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "cors": "2.8.5",
+    "firebase": "5.9.2",
     "laravel-cli": "0.0.3",
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
