--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "4.11.0",
     "sass-loader": "7.1.0",
     "vue": "^2.5.2",
+    "vue-router": "3.0.2",
     "vuex": "3.1.0"
   },
   "devDependencies": {
